# ie0417

./: LICENSE  README.md
.github/workflows/: main.yml
docs/: .buildinfo
docs/html/: doxygen_crawl.html  globals.html  main_8cpp.html
docs/html/html/: globals_func.html  index.html
docs/html/html/search/: all_2.js  variables_0.js
docs/html/search/: all_4.js  all_9.js  functions_1.js  functions_3.js  searchdata.js  variables_1.js
doxydocs/docs/html/: files.html
doxydocs/docs/html/search/: all_7.js  all_8.js
laboratorios/lab5_django_docker/: .env  Dockerfile  README.md  docker-compose.yml
laboratorios/lab5_django_docker/myproject/: settings.py
laboratorios/lab5_django_docker/notas/: models.py
laboratorios/lab5_django_docker/notas/migrations/: 0001_initial.py
laboratorios/laboratorio2/: README.md
laboratorios/laboratorio2/SPHINX/: screensaver.py
laboratorios/laboratorio3/: README.md
laboratorios/laboratorio4/: README.md
laboratorios/laboratorio6/: Barriers.cpp  Deadlock.cpp  Mutual_Exclusion.cpp  Productor_Consumidor.cpp  Race_Condition_for.cpp  Race_Condition_vector.cpp  Semaforo.cpp  Variables_De_Condicion.cpp
laboratorios/laboratorio7/: 01_errores_generales.cpp  02_gdb_division_cero.cpp  032_valgrind_memoria.cpp  03_valgrind_memoria.cpp  04_address_sanitizer.cpp  05_thread_sanitizer.cpp  06_helgrind_race.cpp  07_helgrind_corregido.cpp
laboratorios/laboratorio8/: CMakeLists.txt  Cmakelists.txt  authentication.h  calculator.h  database.h  mock_database.h  seed.cpp  test_authentication.cpp
tareas/tarea1/: README.md
(+10 files in other folders)
